--- a/dev/assets/scss/main.scss
+++ b/dev/assets/scss/main.scss
@@ -9,7 +9,18 @@ body {
 
 header {
     nav {
-        height: 60px;
+        position: relative;
+        height: 65px;
+        backdrop-filter: blur(10px);
+        &::after {
+            @include vs;
+            width: calc(100% - 40px);
+            height: 1px;
+            top: auto;
+            left: 20px;
+            bottom: 0;
+            background-color: rgba($color-main-pink, .4);
+        }
         .gnb-list {
             display: flex;
             justify-content: center;
